# amphlib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
include/tbrekalo/: book.h  isbn.h  lib.h  library.h  storage.h  uuid.h
misc/: google-books.ipynb
src/: book.cc  isbn.cc  lib.cc  library.cc  storage.cc  test.cc  uuid.cc
