[project]
name = "amphinicy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "cmake-format>=0.6.13",
    "cmake-language-server>=0.1.11",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "notebook>=7.4.0",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "pydantic-extra-types>=2.10.3",
    "sqlalchemy>=2.0.40",
]
